last correction contrast ratio aria label

--- a/Sass/Base/_Typography.scss
+++ b/Sass/Base/_Typography.scss
@@ -41,6 +41,9 @@ h4 {
 a
  {
    font-family: helvetica;
-   font-weight: 400;
+   font-weight: 600;
    color: #575757;
+   &:focus{
+	   outline: 0;
+   }
 }
