--- a/Sass/Pages/_Accueil.scss
+++ b/Sass/Pages/_Accueil.scss
@@ -27,8 +27,9 @@
     padding: 5rem;
     @media (max-width: 950px) {
        display: flex;
+       max-width: 800px;
        flex-direction: column;
-       padding: 2rem;
+       padding: 3rem;
     }
  }
  
@@ -42,7 +43,7 @@
     text-align: left;
     margin: 1rem;
     @media (max-width: 950px) {
-       margin-top: 2rem;
+       margin-top: 3.5rem;
     }
     &:hover {
        background-color: $color-tertiaire;
@@ -130,6 +131,9 @@
         display: flex;
         flex-direction: column;
         padding: 0;
+        justify-content: center;
+        align-items: center;
+        justify-items: center;
      }
     }
     &__card {
