--- a/Sass/Utils/_Variables.scss
+++ b/Sass/Utils/_Variables.scss
@@ -2,4 +2,4 @@ $color-primary:#fff;
 $color-secondary: #81361d;
 $color-tertiaire:#313131;
 $color-input:  #555;
-$color-title: #c46133;
+$color-title: #a1451a;
