--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,9 @@ h2 {
 h3 {
   font-size: 15px;
   text-transform: uppercase;
-  color: #c46133;
+  color: #a1451a;
   font-weight: 600;
-  border-bottom: solid #c46133 3.5px;
+  border-bottom: solid #a1451a 3.5px;
   padding: 10px;
 }
 
@@ -73,8 +73,11 @@ h4 {
 
 a {
   font-family: helvetica;
-  font-weight: 400;
+  font-weight: 600;
   color: #575757;
+}
+a:focus {
+  outline: 0;
 }
 
 .buttons {
@@ -372,7 +375,7 @@ p {
   padding: 5em 0 5em 0;
   color: #fff;
   clear: both;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-size: auto;
   position: relative;
 }
@@ -400,8 +403,9 @@ p {
 @media (max-width: 950px) {
   .Sevices__container {
     display: flex;
+    max-width: 800px;
     flex-direction: column;
-    padding: 2rem;
+    padding: 3rem;
   }
 }
 
@@ -419,7 +423,7 @@ p {
 }
 @media (max-width: 950px) {
   .Services__card {
-    margin-top: 2rem;
+    margin-top: 3.5rem;
   }
 }
 .Services__card:hover {
@@ -464,7 +468,7 @@ p {
   padding: 5em 0 5em 0;
   color: #fff;
   clear: both;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-size: auto;
   position: relative;
   display: flex;
@@ -515,6 +519,9 @@ p {
     display: flex;
     flex-direction: column;
     padding: 0;
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
   }
 }
 .portfolio__card {
@@ -551,7 +558,7 @@ p {
   padding: 5em 0 5em 0;
   color: #fff;
   clear: both;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-size: auto;
   position: relative;
 }
